Bug 325469 - Show operation signature option for sequence diagram is not persisted
Summary: Show operation signature option for sequence diagram is not persisted
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.11.1
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-09-30 18:23 UTC by Enzo Cappa
Modified: 2014-02-16 13:58 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.13.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Enzo Cappa 2013-09-30 18:23:48 UTC
The sequence diagram has an option (right click -> properties) that is supposed to show or hide the operation signature. 

It partially works, because if you uncheck it, the signatures are hidden, but if you enter the properties dialog again it will be shown checked again. Also, if you move something in the graph, all the signatures are shown again.

After a test, looks like modifying the XMI file and changing showattsig to 0, the signatures are actually hidden and the option is persisted. So, looks like the checkbox is not persisting the option into the XMI file.

Reproducible: Always

Steps to Reproduce:
1. Create or edit sequence diagram
2. Right click -> properties dialog
3. Uncheck the "Show operations signature" option
4. Repeat step 2
Actual Results:  
The option is shown checked

Expected Results:  
The option is shown unchecked
Comment 1 Joris Steyn 2014-02-16 13:58:50 UTC
Git commit 78af443491f42998b058fd196f05ddef478531d6 by Joris Steyn.
Committed on 16/02/2014 at 13:40.
Pushed by jorissteyn into branch 'master'.

Persist operation signature setting for sequence diagrams

In master, the setting was recently (accidentally) removed. Previous commit
restores the checkbox and this commit makes sure it's only visible for sequence
diagrams and actually works.
FIXED-IN: 4.13.0

M  +4    -2    umbrello/dialogs/diagrampropertiespage.cpp
M  +0    -1    umbrello/dialogs/umlwidgetstylepage.cpp

http://commits.kde.org/umbrello/78af443491f42998b058fd196f05ddef478531d6