Persist operation signature setting for sequence diagrams

In master, the setting was recently (accidentally) removed. Previous commit
restores the checkbox and this commit makes sure it's only visible for sequence
diagrams and actually works.

BUG: 325469
FIXED-IN: 4.13.0