umbrello/dialogs/diagrampropertiespage.cpp
@@ -33,7 +33,6 @@ DiagramPropertiesPage::DiagramPropertiesPage(QWidget *parent, UMLScene *scene)
 
     ui_diagramName->setText(scene->name());
     ui_zoom->setValue(scene->activeView()->currentZoom());
-    ui_showOpSigs->setChecked(scene->showOpSig());
 
     ui_checkBoxShowGrid->setChecked(scene->isSnapGridVisible());
     ui_snapToGrid->setChecked(scene->snapToGrid());
@@ -45,8 +44,11 @@ DiagramPropertiesPage::DiagramPropertiesPage(QWidget *parent, UMLScene *scene)
     if (scene->type() == Uml::DiagramType::Sequence) {
         ui_autoIncrementSequence->setVisible(true);
         ui_autoIncrementSequence->setChecked(scene->autoIncrementSequence());
+        ui_showOpSigs->setVisible(true);
+        ui_showOpSigs->setChecked(scene->showOpSig());
     } else {
         ui_autoIncrementSequence->setVisible(false);
+        ui_showOpSigs->setVisible(false);
     }
 }
 
@@ -109,9 +111,9 @@ void DiagramPropertiesPage::apply()
     m_scene->setSnapToGrid(ui_snapToGrid->isChecked());
     m_scene->setSnapComponentSizeToGrid(ui_snapComponentSizeToGrid->isChecked());
     m_scene->setSnapGridVisible(ui_checkBoxShowGrid->isChecked());
-    m_scene->setShowOpSig(ui_showOpSigs->isChecked());
     if (m_scene->type() == Uml::DiagramType::Sequence) {
         m_scene->setAutoIncrementSequence(ui_autoIncrementSequence->isChecked());
+        m_scene->setShowOpSig(ui_showOpSigs->isChecked());
     }
     emit applyClicked();
 }
