umbrello/dialogs/umlwidgetstylepage.cpp
@@ -252,7 +252,6 @@ void UMLWidgetStylePage::updateUMLWidget()
         m_options->uiState.backgroundColor = m_BackgroundColorB->color();
         m_options->uiState.gridDotColor = m_GridDotColorB->color();
         m_options->uiState.lineWidth = m_lineWidthB->value();
-        UMLApp::app()->currentView()->umlScene()->setOptionState(*m_options);
     }
 
     if (!m_pUMLWidget) {  // when we are on the diagram
